# bicameralAI

./: OPENCODE_INTEGRATION_GUIDE.md  OPENCODE_PROVIDER_SETUP.md  README.md  bicameral-provider.js  bicameral-simple.js  brain_mesh_data.js  brainscan-matrix.html  brainscan-matrix.js  eeg-spatializer.html  eeg_bridge_server.py  example-simple.js  mcp-lmstudio-config.json  mcp-server.js  mcp.json  opencode-api-examples.js  opencode-api.js  package.json  providers.json  rest-bridge.js  test-rest-api.js  test-simple.js
rust-bridge/: Cargo.toml  README.md
rust-bridge/src/: bridge.rs  compute_metrics.rs  eeg_source.rs  lmstudio.rs  main.rs  orchestrator.rs  peer_connection.rs  query_cache.rs  server.rs  spatialization.rs  types.rs
